2007-03-19  J. Tang  <jtang@tresys.com>

	* When viewing AV rule differences, click (either left or right) a
	permission name.  This will now popup a menu that gives line
	numbers for rules that contributed just that permission, rather
	than the entire AV rule.  This is enabled when source policies are
	used.

2007-03-16  J. Tang  <jtang@tresys.com>

	* Added poldiff_avrule_get_orig_line_numbers_for_perm() and
	poldiff_avrule_get_mod_line_numbers_for_perm().

2007-03-15  J. Tang  <jtang@tresys.com>

	* Split libpoldiff/include/rule_diff.h into
	libpoldiff/include/avrule_diff.h and
	libpoldiff/include/terule_diff.h.  None of the function names were
	changed.

	* Re-standardized all programs' command line options.  -V always
	shows the version, -c always deals with object classes, and so
	forth.  Man pages updated.

	* Renamed libapol/include/rangetrans-query.h to
	libapol/include/range_trans-query.h.  Likewise renamed
	libpoldiff's rangetrans_diff.h  None of the function names were
	changed.

2007-03-13  J. Tang  <jtang@tresys.com>

	* fixed segfault in libseaudit when, while parsing an AVC
	message's permissions list it does not encounter a closing brace.

	* information flow graphs are now being constructed via a BST and
	its O(log n), rather than via a vector and O(n).  It should be
	noticeably faster now.

	* fixed error in information flow analysis, transitive mode.  The
	returned flows were mistakenly all set to be the same object
	class.  For example if a step was foo_t -> bar_t by way of class
	baz_c, subsequent flows were accidentally being constrained to
	also be of baz_c.

	* fixed error in apol_bst_insert() and apol_bst_insert_and_get(),
	where the return values of 0 and 1 were flipped.  The comment was
	correct, but the code was not.

2007-03-12  J. Tang  <jtang@tresys.com>

	* fixed share libraries's soname, such that SETools's programs
	depend upon the correct name.  For example, seaudit's .dynamic